--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -22,3 +22,14 @@
     color: $neutral-600;
   }
 }
+
+@include respond-to($breakpoint-tablets) {
+  .header {
+    margin-bottom: 6.4rem;
+
+    &__title {
+      font-size: 4.8rem;
+      line-height: 1;
+    }
+  }
+}
