--- a/styles/layout/_main.scss
+++ b/styles/layout/_main.scss
@@ -4,3 +4,9 @@
   padding: 4.8rem 1.6rem;
   box-shadow: 0 1px 2 0 rgba(0, 0, 0, 0.5);
 }
+
+@include respond-to($breakpoint-tablets) {
+  .main {
+    padding: 6.4rem 1.6rem;
+  }
+}
