--- a/styles/layout/_profiles.scss
+++ b/styles/layout/_profiles.scss
@@ -2,3 +2,12 @@
   @extend %grid;
   row-gap: 4.8rem;
 }
+
+@include respond-to($breakpoint-tablets) {
+  .profiles {
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+    align-items: baseline;
+    column-gap: 3.2rem;
+    row-gap: 6.4rem;
+  }
+}
