--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,6 @@
 .profile, .header {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center; }
 
 .profiles {
@@ -81,6 +80,9 @@ img {
     align-items: baseline;
     column-gap: 3.2rem;
     row-gap: 6.4rem; } }
+@media (min-width: 75em) {
+  .profiles {
+    padding: 0 3.2rem; } }
 .header {
   margin-bottom: 4.8rem;
   text-align: center; }
@@ -110,5 +112,8 @@ img {
 @media (min-width: 48em) {
   .main {
     padding: 6.4rem 1.6rem; } }
+@media (min-width: 75em) {
+  .main {
+    padding: 9.6rem 6.4rem; } }
 
 /*# sourceMappingURL=main.css.map */
