--- a/styles/main.css
+++ b/styles/main.css
@@ -103,6 +103,8 @@ img {
       font-size: 4.8rem;
       line-height: 1; } }
 .main {
+  max-width: 144rem;
+  margin: 0 auto;
   background-color: #fff;
   border-radius: 0.4rem;
   padding: 4.8rem 1.6rem;
