--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -15,7 +15,7 @@ body {
   font-family: "Noto Sans", sans-serif;
   font-weight: 400;
   line-height: 1;
-  background: $linear-gradient;
+  background-image: $linear-gradient;
   padding: 1.6rem;
 }
 
