--- a/styles/layout/_main.scss
+++ b/styles/layout/_main.scss
@@ -4,17 +4,23 @@
   background-color: #fff;
   border-radius: 0.4rem;
   padding: 4.8rem 1.6rem;
-  box-shadow: 0 1px 2 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 1px 2px 0 rgba($color: #000, $alpha: 0.05);
 }
 
 @include respond-to($breakpoint-tablets) {
   .main {
     padding: 6.4rem 1.6rem;
+    box-shadow:
+      0 4px 6px -1px rgba($color: #000000, $alpha: 0.1),
+      0 2px 4px -1px rgba($color: #000000, $alpha: 0.06);
   }
 }
 
 @include respond-to($breakpoint-desktops) {
   .main {
     padding: 9.6rem 6.4rem;
+    box-shadow:
+      0 10px 15px -3px rgba($color: #000000, $alpha: 0.1),
+      0 4px 6px -2px rgba($color: #000000, $alpha: 0.05);
   }
 }
